[package]
name = "run-in-roblox"
description = "Run stuff inside Roblox Studio"
version = "0.3.1"
authors = ["Harrison Ford <harrison.ford@paradoxum.gg>", "Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
repository = "https://github.com/azul-rbx/run-in-roblox"
license = "MPL-2.0"
readme = "README.md"

[[bin]]
name = "run-in-roblox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.28"
async-channel = "2.1.1"
async-trait = "0.1.76"
axum = "0.7.3"
axum-macros = "0.4.0"
clap = { version = "4.4.12", features = ["derive"] }
colored = "1.9.3"
dashmap = "5.5.3"
env_logger = "0.7.1"
fs-err = "2.3.0"
futures = "0.3.30"
indicatif = { version = "0.17.7", features = ["tokio"] }
log = "0.4.8"
roblox_install = "0.2.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
structopt = "0.3.13"
thiserror = "1.0.14"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
